@@ -1,3 +1,8 @@
+2004-09-07  Seth Robertson  <seth@cheviot.sysdetect.com>
+
+	* perl/BkReportGen/helper_smart.pl (helper_smart($$$$)): Enable
+	S.M.A.R.T. disk health monitoring.
+
 2004-08-25  Seth Robertson  <seth@cheviot.sysdetect.com>
 
 	* lib/installlib.pl (question($$$$;$)): If no verification, don't fail.
